--- a/03-ReverseProxy/demo.local.domain.conf
+++ b/03-ReverseProxy/demo.local.domain.conf
@@ -12,14 +12,7 @@ server {
     location / {
         limit_req zone=10_rps burst=5 nodelay;
 
-        add_header          ServerName "Demo Server";
-        add_header          X-Real-IP $remote_addr;
-        add_header          Host      $host;
-        add_header          X-Forwarded-For $proxy_add_x_forwarded_for;
-        add_header          X-Forwarded-Proto $scheme;
-        add_header          X-Response-Time $request_time;
-        add_header          X-Request-ID $request_id;
-
+        include             /etc/nginx/includes.conf;
         #Limit Rate Headers
         add_header          X-RateLimit-Limit 10;
         add_header          X-RateLimit-Remaining $limit_req_status;
@@ -34,13 +27,8 @@ server {
         proxy_cache_valid 200 30d;
         expires 30d;
         proxy_pass          http://192.168.5.101:80;
-        add_header          ServerName "Demo Server";
-        add_header          X-Real-IP $remote_addr;
-        add_header          Host      $host;
-        add_header          X-Forwarded-For $proxy_add_x_forwarded_for;
-        add_header          X-Forwarded-Proto $scheme;
-        add_header          X-Response-Time $request_time;
-        add_header          X-Request-ID $request_id;
+
+        include             /etc/nginx/includes.conf;
         add_header          X-Cache-Status $upstream_cache_status;
     }
 
@@ -49,13 +37,8 @@ server {
         proxy_cache_valid 200 30d;
         expires 30d;
         proxy_pass          http://192.168.5.101:80;
-        add_header          ServerName "Demo Server";
-        add_header          X-Real-IP $remote_addr;
-        add_header          Host      $host;
-        add_header          X-Forwarded-For $proxy_add_x_forwarded_for;
-        add_header          X-Forwarded-Proto $scheme;
-        add_header          X-Response-Time $request_time;
-        add_header          X-Request-ID $request_id;
+
+        include             /etc/nginx/includes.conf;
         add_header          X-Cache-Status $upstream_cache_status;
     }
 }
