--- a/03-ReverseProxy/docker-compose.yml
+++ b/03-ReverseProxy/docker-compose.yml
@@ -10,3 +10,4 @@ services:
       - ./demo.local.domain.conf:/etc/nginx/conf.d/demo.local.domain.conf
       - ./nginx.conf:/etc/nginx/nginx.conf
       - ./logs:/var/log/nginx
+      - ./includes.conf:/etc/nginx/includes.conf
